cambios del diseno

--- a/html/vitaminasysuplementos.html
+++ b/html/vitaminasysuplementos.html
@@ -56,33 +56,35 @@
             </a>
         </section>
     </header>
-<main class="row container-fluid">
+<main>
     <div class="container text-center">
         <h2>Vitaminas y Suplementos</h2>
     </div>
-    <div class="card col-lg-4 col-md-4 col-sm-12">
+    <div class="row container-fluid mx-auto">
+    <div class="card col-lg-4 col-md-4 col-sm-12 mb-2 ">
         <img src="../img/400chico-CAPSULAS-BLANDAS.jpg" alt="Perifar 400, analgesico y antinflamatorio">
         <h3>Perifar 400 x10 capsulas</h3>
         <p>$111</p>
         <button class="boton">Añadir al carrito</button>
     </div>
-    <div class="card col-lg-4 col-md-4 col-sm-12">
+    <div class="card col-lg-4 col-md-4 col-sm-12 mb-2">
         <img src="../img/600_CAPSULAS-BLANDAS-1.jpg" alt="perifar 600 , analgesico y antinflamatorio">
         <h3>Perifar 600 x10 capsulas</h3>
         <p>$222</p>
         <button class="boton">Añadir al carrito</button>
     </div>
-    <div class="card col-lg-4 col-md-4 col-sm-12">
+    <div class="card col-lg-4 col-md-4 col-sm-12 mb-2">
         <img src="../img/actron 600.JPG" alt="actron 600, analgesico y antiflamatorio">
         <h3>Actron 600 x10 capsulas</h3>
         <p>$333</p>
         <button>Añadir al carrito</button>
     </div>
-    <div class="card col-lg-4 col-md-4 col-sm-12">
+    <div class="card col-lg-4 col-md-4 col-sm-12 mb-2">
         <img src="../img/actron 400.AVIF" alt="actron 600, analgesico y antiflamatorio">
         <h3>Actron 600 x10 capsulas</h3>
         <p>$333</p>
         <button>Añadir al carrito</button>
+    </div>
     </div>
 </main>
 <body>
