--- a/index.html
+++ b/index.html
@@ -111,14 +111,13 @@
             alt="Instagram">
         </a>
       </div>
-      <nav class="mapa">
-        <ul>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.40447952936!2d-56.1155251!3d-34.8711881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80cd6dbdb315%3A0xe619229cf8ff6da2!2sFarmacia%20Veracierto!5e0!3m2!1ses-419!2suy!4v1711932636902!5m2!1ses-419!2suy"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+
+      <div class="iframe">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.40447952936!2d-56.1155251!3d-34.8711881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80cd6dbdb315%3A0xe619229cf8ff6da2!2sFarmacia%20Veracierto!5e0!3m2!1ses-419!2suy!4v1711932636902!5m2!1ses-419!2suy"
+            width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </ul>
-      </nav>
+      </div>
+
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
