--- a/html/antigripales.html
+++ b/html/antigripales.html
@@ -9,6 +9,7 @@
         Además de nuestra amplia gama de productos farmacéuticos de calidad, en Farmacia Veracierto también ofrecemos servicios especializados que se adaptan a las necesidades individuales de cada cliente. Desde la gestión de medicamentos hasta consejos de salud personalizados, estamos comprometidos a ser tu socio de confianza en el cuidado de tu bienestar.       
         Descubre por qué Farmacia Veracierto es el destino preferido de tantas familias en busca de un servicio farmacéutico excepcional y un ambiente acogedor. ¡Visítanos hoy y experimenta la diferencia que una farmacia con tradición y calidez puede hacer en tu vida!">
     <title>Farmacia Veracierto</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--CSS BS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- CSS -->
@@ -56,36 +57,37 @@
             </a>
         </section>
     </header>
-<main class="row container-fluid">
+<main class="row container-fluid" data-aos="zoom-out" data-aos-duration="800">
     <div class="container text-center">
         <h2>Antigripales</h2>
     </div>
-    <div class="card col-lg-4 col-md-4 col-sm-12">
-        <img src="../img/400chico-CAPSULAS-BLANDAS.jpg" alt="Perifar 400, analgesico y antinflamatorio">
-        <h3>Perifar 400 x10 capsulas</h3>
+    <div class="row justify-content-center ">
+    <div class="card col-lg-4 col-md-4 col-sm-12 mb-2 ">
+        <img src="../img/pergrip.PNG" alt="Perifar grip, analgesico y antinflamatorio">
+        <h3>Perifar grip x 8comp</h3>
         <p>$111</p>
         <button class="boton">Añadir al carrito</button>
     </div>
-    <div class="card col-lg-4 col-md-4 col-sm-12">
-        <img src="../img/600_CAPSULAS-BLANDAS-1.jpg" alt="perifar 600 , analgesico y antinflamatorio">
-        <h3>Perifar 600 x10 capsulas</h3>
+    <div class="card col-lg-4 col-md-4 col-sm-12 mb-2">
+        <img src="../img/flodigriocomp.PNG" alt="flodigrip, analgesico y antinflamatorio">
+        <h3>Flodigrip x 10 comprimidos</h3>
         <p>$222</p>
         <button class="boton">Añadir al carrito</button>
     </div>
-    <div class="card col-lg-4 col-md-4 col-sm-12">
-        <img src="../img/actron 600.JPG" alt="actron 600, analgesico y antiflamatorio">
-        <h3>Actron 600 x10 capsulas</h3>
+    <div class="card col-lg-4 col-md-4 col-sm-12 mb-2">
+        <img src="../img/dolexgrip.JPG" alt="dolex grip, analgesico y antiflamatorio">
+        <h3>Dolex grip</h3>
         <p>$333</p>
         <button>Añadir al carrito</button>
     </div>
-    <div class="card col-lg-4 col-md-4 col-sm-12">
-        <img src="../img/actron 400.AVIF" alt="actron 600, analgesico y antiflamatorio">
-        <h3>Actron 600 x10 capsulas</h3>
+    <div class="card col-lg-4 col-md-4 col-sm-12 mb-2">
+        <img src="../img/ibupiracgrip.PNG" alt="ibupirac grip, analgesico y antiflamatorio">
+        <h3>Ibupirac grip</h3>
         <p>$333</p>
         <button>Añadir al carrito</button>
+    </div>
     </div>
 </main>
-
 <body>
     <!--FOOTER-->
     <footer class="footer">
@@ -119,8 +121,10 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/ac484d389e.js"></script>
-
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
