--- a/html/vitaminasysuplementos.html
+++ b/html/vitaminasysuplementos.html
@@ -9,6 +9,7 @@
         Además de nuestra amplia gama de productos farmacéuticos de calidad, en Farmacia Veracierto también ofrecemos servicios especializados que se adaptan a las necesidades individuales de cada cliente. Desde la gestión de medicamentos hasta consejos de salud personalizados, estamos comprometidos a ser tu socio de confianza en el cuidado de tu bienestar.       
         Descubre por qué Farmacia Veracierto es el destino preferido de tantas familias en busca de un servicio farmacéutico excepcional y un ambiente acogedor. ¡Visítanos hoy y experimenta la diferencia que una farmacia con tradición y calidez puede hacer en tu vida!">
     <title>Farmacia Veracierto</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--CSS BS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- CSS -->
@@ -56,32 +57,32 @@
             </a>
         </section>
     </header>
-<main>
+<main class="row container-fluid" data-aos="zoom-out" data-aos-duration="800">
     <div class="container text-center">
         <h2>Vitaminas y Suplementos</h2>
     </div>
-    <div class="row container-fluid mx-auto">
+    <div class="row justify-content-center ">
     <div class="card col-lg-4 col-md-4 col-sm-12 mb-2 ">
-        <img src="../img/400chico-CAPSULAS-BLANDAS.jpg" alt="Perifar 400, analgesico y antinflamatorio">
-        <h3>Perifar 400 x10 capsulas</h3>
+        <img src="../img/colagenolc.JPG" alt="colagenol c">
+        <h3>Colagenol C x 30 capsulas</h3>
         <p>$111</p>
         <button class="boton">Añadir al carrito</button>
     </div>
     <div class="card col-lg-4 col-md-4 col-sm-12 mb-2">
-        <img src="../img/600_CAPSULAS-BLANDAS-1.jpg" alt="perifar 600 , analgesico y antinflamatorio">
-        <h3>Perifar 600 x10 capsulas</h3>
+        <img src="../img/colagenolplus.JPG" alt="colagenol plus">
+        <h3>Colagenol Plus</h3>
         <p>$222</p>
         <button class="boton">Añadir al carrito</button>
     </div>
     <div class="card col-lg-4 col-md-4 col-sm-12 mb-2">
-        <img src="../img/actron 600.JPG" alt="actron 600, analgesico y antiflamatorio">
-        <h3>Actron 600 x10 capsulas</h3>
+        <img src="../img/megaomega.JPG" alt="mega omega, omega 3 aceite de pescado">
+        <h3>Mega Omega x 30 capsulas</h3>
         <p>$333</p>
         <button>Añadir al carrito</button>
     </div>
     <div class="card col-lg-4 col-md-4 col-sm-12 mb-2">
-        <img src="../img/actron 400.AVIF" alt="actron 600, analgesico y antiflamatorio">
-        <h3>Actron 600 x10 capsulas</h3>
+        <img src="../img/omega3.JPG" alt="omega 3, aceite de pescado">
+        <h3>Omega 3 x 40 capsulas</h3>
         <p>$333</p>
         <button>Añadir al carrito</button>
     </div>
@@ -120,8 +121,10 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/ac484d389e.js"></script>
-
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
