--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         Además de nuestra amplia gama de productos farmacéuticos de calidad, en Farmacia Veracierto también ofrecemos servicios especializados que se adaptan a las necesidades individuales de cada cliente. Desde la gestión de medicamentos hasta consejos de salud personalizados, estamos comprometidos a ser tu socio de confianza en el cuidado de tu bienestar.       
         Descubre por qué Farmacia Veracierto es el destino preferido de tantas familias en busca de un servicio farmacéutico excepcional y un ambiente acogedor. ¡Visítanos hoy y experimenta la diferencia que una farmacia con tradición y calidez puede hacer en tu vida!">
   <title>Farmacia Veracierto</title>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--CSS BS-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <!-- CSS -->
@@ -71,8 +72,10 @@
       </div>
     </div>
   </section>
-  <main class="row container-fluid">
-    <h2>Ofertas</h2>
+  <main class="row container-fluid" data-aos="zoom-out" data-aos-duration="800">
+    <div class="container text-center">
+      <h2>Ofertas</h2>
+  </div>
     <div class="card col-lg-4 col-md-4 col-sm-12">
       <img src="./img/400chico-CAPSULAS-BLANDAS.jpg" alt="Perifar 400, analgesico y antinflamatorio">
       <h3>Perifar 400 x10 capsulas</h3>
@@ -122,6 +125,11 @@
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://kit.fontawesome.com/ac484d389e.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
 
 
 </body>
