--- a/html/contacto.html
+++ b/html/contacto.html
@@ -9,7 +9,7 @@
         Además de nuestra amplia gama de productos farmacéuticos de calidad, en Farmacia Veracierto también ofrecemos servicios especializados que se adaptan a las necesidades individuales de cada cliente. Desde la gestión de medicamentos hasta consejos de salud personalizados, estamos comprometidos a ser tu socio de confianza en el cuidado de tu bienestar.       
         Descubre por qué Farmacia Veracierto es el destino preferido de tantas familias en busca de un servicio farmacéutico excepcional y un ambiente acogedor. ¡Visítanos hoy y experimenta la diferencia que una farmacia con tradición y calidez puede hacer en tu vida!">
     <title>Farmacia Veracierto</title>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--CSS BS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- CSS -->
@@ -111,7 +111,7 @@
                 <ul>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.40447952936!2d-56.1155251!3d-34.8711881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80cd6dbdb315%3A0xe619229cf8ff6da2!2sFarmacia%20Veracierto!5e0!3m2!1ses-419!2suy!4v1711932636902!5m2!1ses-419!2suy"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="600" type="mapa" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </ul>
             </nav>
